server/jolc/Optimizacion/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMI
    PORCENTAJE

Grammar

Rule 0     S' -> init
Rule 1     init -> encabezado
Rule 2     encabezado -> RPACK RMAIN PTCOMA sigEnc funciones
Rule 3     sigEnc -> RIMPORT PARIZQ conjLibs
Rule 4     conjLibs -> CADENA PARDER variables
Rule 5     conjLibs -> CADENA PTCOMA CADENA PARDER variables
Rule 6     variables -> RVAR RSTACK CORIZQ ENTERO CORDER RFLOAT PTCOMA variables1
Rule 7     variables1 -> RVAR RHEAP CORIZQ ENTERO CORDER RFLOAT PTCOMA variables2
Rule 8     variables2 -> RVAR RP COMA RH RFLOAT PTCOMA variables3
Rule 9     variables3 -> RVAR listaTMP RFLOAT PTCOMA
Rule 10    listaTMP -> listaTMP COMA ID
Rule 11    listaTMP -> ID
Rule 12    funciones -> funciones funcion
Rule 13    funciones -> funcion
Rule 14    funcion -> RFUNC ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
Rule 15    funcion -> RFUNC RMAIN PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
Rule 16    instrucciones -> instrucciones instruccion
Rule 17    instrucciones -> instruccion
Rule 18    instruccion -> asignacion PTCOMA
Rule 19    instruccion -> imprimir PTCOMA
Rule 20    instruccion -> salto
Rule 21    instruccion -> if_inst
Rule 22    instruccion -> llamada_func PTCOMA
Rule 23    instruccion -> etiqueta_instr
Rule 24    instruccion -> return_instr PTCOMA
Rule 25    llamada_func -> ID PARIZQ PARDER
Rule 26    return_instr -> RRETURN
Rule 27    etiqueta_instr -> ID DOSPTS
Rule 28    if_inst -> RIF expresion LLAVIZQ salto LLAVDER
Rule 29    salto -> RGOTO ID PTCOMA
Rule 30    imprimir -> RFMT PUNTO RPRINT PARIZQ CADENA COMA expresion PARDER
Rule 31    asignacion -> expresion IGUAL expresion MAS expresion
Rule 32    asignacion -> expresion IGUAL expresion MENOS expresion
Rule 33    asignacion -> expresion IGUAL expresion POR expresion
Rule 34    asignacion -> expresion IGUAL expresion DIV expresion
Rule 35    asignacion -> expresion IGUAL expresion
Rule 36    asignacion -> expresion IGUAL RSTACK CORIZQ RINT PARIZQ expresion PARDER CORDER
Rule 37    asignacion -> expresion IGUAL RHEAP CORIZQ RINT PARIZQ expresion PARDER CORDER
Rule 38    asignacion -> RSTACK CORIZQ RINT PARIZQ expresion PARDER CORDER IGUAL expresion
Rule 39    asignacion -> RHEAP CORIZQ RINT PARIZQ expresion PARDER CORDER IGUAL expresion
Rule 40    asignacion -> expresion IGUAL RMATH PUNTO RMOD PARIZQ expresion COMA expresion PARDER
Rule 41    expresion -> DECIMAL
Rule 42    expresion -> ENTERO
Rule 43    expresion -> RP
Rule 44    expresion -> RH
Rule 45    expresion -> ID
Rule 46    expresion -> expresion MAYOR expresion
Rule 47    expresion -> expresion MAYORIGUAL expresion
Rule 48    expresion -> expresion MENOR expresion
Rule 49    expresion -> expresion MENORIGUAL expresion
Rule 50    expresion -> expresion IGUALDAD expresion
Rule 51    expresion -> expresion DIFERENTE expresion
Rule 52    expresion -> RINT PARIZQ expresion PARDER
Rule 53    expresion -> MENOS expresion

Terminals, with rules where they appear

CADENA               : 4 5 5 30
COMA                 : 8 10 30 40
COMI                 : 
CORDER               : 6 7 36 37 38 39
CORIZQ               : 6 7 36 37 38 39
DECIMAL              : 41
DIFERENTE            : 51
DIV                  : 34
DOSPTS               : 27
ENTERO               : 6 7 42
ID                   : 10 11 14 25 27 29 45
IGUAL                : 31 32 33 34 35 36 37 38 39 40
IGUALDAD             : 50
LLAVDER              : 14 15 28
LLAVIZQ              : 14 15 28
MAS                  : 31
MAYOR                : 46
MAYORIGUAL           : 47
MENOR                : 48
MENORIGUAL           : 49
MENOS                : 32 53
PARDER               : 4 5 14 15 25 30 36 37 38 39 40 52
PARIZQ               : 3 14 15 25 30 36 37 38 39 40 52
POR                  : 33
PORCENTAJE           : 
PTCOMA               : 2 5 6 7 8 9 18 19 22 24 29
PUNTO                : 30 40
RFLOAT               : 6 7 8 9
RFMT                 : 30
RFUNC                : 14 15
RGOTO                : 29
RH                   : 8 44
RHEAP                : 7 37 39
RIF                  : 28
RIMPORT              : 3
RINT                 : 36 37 38 39 52
RMAIN                : 2 15
RMATH                : 40
RMOD                 : 40
RP                   : 8 43
RPACK                : 2
RPRINT               : 30
RRETURN              : 26
RSTACK               : 6 36 38
RVAR                 : 6 7 8 9
error                : 

Nonterminals, with rules where they appear

asignacion           : 18
conjLibs             : 3
encabezado           : 1
etiqueta_instr       : 23
expresion            : 28 30 31 31 31 32 32 32 33 33 33 34 34 34 35 35 36 36 37 37 38 38 39 39 40 40 40 46 46 47 47 48 48 49 49 50 50 51 51 52 53
funcion              : 12 13
funciones            : 2 12
if_inst              : 21
imprimir             : 19
init                 : 0
instruccion          : 16 17
instrucciones        : 14 15 16
listaTMP             : 9 10
llamada_func         : 22
return_instr         : 24
salto                : 20 28
sigEnc               : 2
variables            : 4 5
variables1           : 6
variables2           : 7
variables3           : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . encabezado
    (2) encabezado -> . RPACK RMAIN PTCOMA sigEnc funciones

    RPACK           shift and go to state 3

    init                           shift and go to state 1
    encabezado                     shift and go to state 2

state 1

    (0) S' -> init .



state 2

    (1) init -> encabezado .

    $end            reduce using rule 1 (init -> encabezado .)


state 3

    (2) encabezado -> RPACK . RMAIN PTCOMA sigEnc funciones

    RMAIN           shift and go to state 4


state 4

    (2) encabezado -> RPACK RMAIN . PTCOMA sigEnc funciones

    PTCOMA          shift and go to state 5


state 5

    (2) encabezado -> RPACK RMAIN PTCOMA . sigEnc funciones
    (3) sigEnc -> . RIMPORT PARIZQ conjLibs

    RIMPORT         shift and go to state 7

    sigEnc                         shift and go to state 6

state 6

    (2) encabezado -> RPACK RMAIN PTCOMA sigEnc . funciones
    (12) funciones -> . funciones funcion
    (13) funciones -> . funcion
    (14) funcion -> . RFUNC ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (15) funcion -> . RFUNC RMAIN PARIZQ PARDER LLAVIZQ instrucciones LLAVDER

    RFUNC           shift and go to state 10

    funciones                      shift and go to state 8
    funcion                        shift and go to state 9

state 7

    (3) sigEnc -> RIMPORT . PARIZQ conjLibs

    PARIZQ          shift and go to state 11


state 8

    (2) encabezado -> RPACK RMAIN PTCOMA sigEnc funciones .
    (12) funciones -> funciones . funcion
    (14) funcion -> . RFUNC ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (15) funcion -> . RFUNC RMAIN PARIZQ PARDER LLAVIZQ instrucciones LLAVDER

    $end            reduce using rule 2 (encabezado -> RPACK RMAIN PTCOMA sigEnc funciones .)
    RFUNC           shift and go to state 10

    funcion                        shift and go to state 12

state 9

    (13) funciones -> funcion .

    RFUNC           reduce using rule 13 (funciones -> funcion .)
    $end            reduce using rule 13 (funciones -> funcion .)


state 10

    (14) funcion -> RFUNC . ID PARIZQ PARDER LLAVIZQ instrucciones LLAVDER
    (15) funcion -> RFUNC . RMAIN PARIZQ PARDER LLAVIZQ instrucciones LLAVDER

    ID              shift and go to state 13
    RMAIN           shift and go to state 14


state 11

    (3) sigEnc -> RIMPORT PARIZQ . conjLibs
    (4) conjLibs -> . CADENA PARDER variables
    (5) conjLibs -> . CADENA PTCOMA CADENA PARDER variables

    CADENA          shift and go to state 16

    conjLibs                       shift and go to state 15

state 12

    (12) funciones -> funciones funcion .

    RFUNC           reduce using rule 12 (funciones -> funciones funcion .)
    $end            reduce using rule 12 (funciones -> funciones funcion .)


state 13

    (14) funcion -> RFUNC ID . PARIZQ PARDER LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 17


state 14

    (15) funcion -> RFUNC RMAIN . PARIZQ PARDER LLAVIZQ instrucciones LLAVDER

    PARIZQ          shift and go to state 18


state 15

    (3) sigEnc -> RIMPORT PARIZQ conjLibs .

    RFUNC           reduce using rule 3 (sigEnc -> RIMPORT PARIZQ conjLibs .)


state 16

    (4) conjLibs -> CADENA . PARDER variables
    (5) conjLibs -> CADENA . PTCOMA CADENA PARDER variables

    PARDER          shift and go to state 19
    PTCOMA          shift and go to state 20


state 17

    (14) funcion -> RFUNC ID PARIZQ . PARDER LLAVIZQ instrucciones LLAVDER

    PARDER          shift and go to state 21


state 18

    (15) funcion -> RFUNC RMAIN PARIZQ . PARDER LLAVIZQ instrucciones LLAVDER

    PARDER          shift and go to state 22


state 19

    (4) conjLibs -> CADENA PARDER . variables
    (6) variables -> . RVAR RSTACK CORIZQ ENTERO CORDER RFLOAT PTCOMA variables1

    RVAR            shift and go to state 24

    variables                      shift and go to state 23

state 20

    (5) conjLibs -> CADENA PTCOMA . CADENA PARDER variables

    CADENA          shift and go to state 25


state 21

    (14) funcion -> RFUNC ID PARIZQ PARDER . LLAVIZQ instrucciones LLAVDER

    LLAVIZQ         shift and go to state 26


state 22

    (15) funcion -> RFUNC RMAIN PARIZQ PARDER . LLAVIZQ instrucciones LLAVDER

    LLAVIZQ         shift and go to state 27


state 23

    (4) conjLibs -> CADENA PARDER variables .

    RFUNC           reduce using rule 4 (conjLibs -> CADENA PARDER variables .)


state 24

    (6) variables -> RVAR . RSTACK CORIZQ ENTERO CORDER RFLOAT PTCOMA variables1

    RSTACK          shift and go to state 28


state 25

    (5) conjLibs -> CADENA PTCOMA CADENA . PARDER variables

    PARDER          shift and go to state 29


state 26

    (14) funcion -> RFUNC ID PARIZQ PARDER LLAVIZQ . instrucciones LLAVDER
    (16) instrucciones -> . instrucciones instruccion
    (17) instrucciones -> . instruccion
    (18) instruccion -> . asignacion PTCOMA
    (19) instruccion -> . imprimir PTCOMA
    (20) instruccion -> . salto
    (21) instruccion -> . if_inst
    (22) instruccion -> . llamada_func PTCOMA
    (23) instruccion -> . etiqueta_instr
    (24) instruccion -> . return_instr PTCOMA
    (31) asignacion -> . expresion IGUAL expresion MAS expresion
    (32) asignacion -> . expresion IGUAL expresion MENOS expresion
    (33) asignacion -> . expresion IGUAL expresion POR expresion
    (34) asignacion -> . expresion IGUAL expresion DIV expresion
    (35) asignacion -> . expresion IGUAL expresion
    (36) asignacion -> . expresion IGUAL RSTACK CORIZQ RINT PARIZQ expresion PARDER CORDER
    (37) asignacion -> . expresion IGUAL RHEAP CORIZQ RINT PARIZQ expresion PARDER CORDER
    (38) asignacion -> . RSTACK CORIZQ RINT PARIZQ expresion PARDER CORDER IGUAL expresion
    (39) asignacion -> . RHEAP CORIZQ RINT PARIZQ expresion PARDER CORDER IGUAL expresion
    (40) asignacion -> . expresion IGUAL RMATH PUNTO RMOD PARIZQ expresion COMA expresion PARDER
    (30) imprimir -> . RFMT PUNTO RPRINT PARIZQ CADENA COMA expresion PARDER
    (29) salto -> . RGOTO ID PTCOMA
    (28) if_inst -> . RIF expresion LLAVIZQ salto LLAVDER
    (25) llamada_func -> . ID PARIZQ PARDER
    (27) etiqueta_instr -> . ID DOSPTS
    (26) return_instr -> . RRETURN
    (41) expresion -> . DECIMAL
    (42) expresion -> . ENTERO
    (43) expresion -> . RP
    (44) expresion -> . RH
    (45) expresion -> . ID
    (46) expresion -> . expresion MAYOR expresion
    (47) expresion -> . expresion MAYORIGUAL expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MENORIGUAL expresion
    (50) expresion -> . expresion IGUALDAD expresion
    (51) expresion -> . expresion DIFERENTE expresion
    (52) expresion -> . RINT PARIZQ expresion PARDER
    (53) expresion -> . MENOS expresion

    RSTACK          shift and go to state 42
    RHEAP           shift and go to state 44
    RFMT            shift and go to state 45
    RGOTO           shift and go to state 46
    RIF             shift and go to state 47
    ID              shift and go to state 30
    RRETURN         shift and go to state 48
    DECIMAL         shift and go to state 49
    ENTERO          shift and go to state 50
    RP              shift and go to state 51
    RH              shift and go to state 52
    RINT            shift and go to state 43
    MENOS           shift and go to state 41

    instrucciones                  shift and go to state 31
    instruccion                    shift and go to state 32
    asignacion                     shift and go to state 33
    imprimir                       shift and go to state 34
    salto                          shift and go to state 35
    if_inst                        shift and go to state 36
    llamada_func                   shift and go to state 37
    etiqueta_instr                 shift and go to state 38
    return_instr                   shift and go to state 39
    expresion                      shift and go to state 40

state 27

    (15) funcion -> RFUNC RMAIN PARIZQ PARDER LLAVIZQ . instrucciones LLAVDER
    (16) instrucciones -> . instrucciones instruccion
    (17) instrucciones -> . instruccion
    (18) instruccion -> . asignacion PTCOMA
    (19) instruccion -> . imprimir PTCOMA
    (20) instruccion -> . salto
    (21) instruccion -> . if_inst
    (22) instruccion -> . llamada_func PTCOMA
    (23) instruccion -> . etiqueta_instr
    (24) instruccion -> . return_instr PTCOMA
    (31) asignacion -> . expresion IGUAL expresion MAS expresion
    (32) asignacion -> . expresion IGUAL expresion MENOS expresion
    (33) asignacion -> . expresion IGUAL expresion POR expresion
    (34) asignacion -> . expresion IGUAL expresion DIV expresion
    (35) asignacion -> . expresion IGUAL expresion
    (36) asignacion -> . expresion IGUAL RSTACK CORIZQ RINT PARIZQ expresion PARDER CORDER
    (37) asignacion -> . expresion IGUAL RHEAP CORIZQ RINT PARIZQ expresion PARDER CORDER
    (38) asignacion -> . RSTACK CORIZQ RINT PARIZQ expresion PARDER CORDER IGUAL expresion
    (39) asignacion -> . RHEAP CORIZQ RINT PARIZQ expresion PARDER CORDER IGUAL expresion
    (40) asignacion -> . expresion IGUAL RMATH PUNTO RMOD PARIZQ expresion COMA expresion PARDER
    (30) imprimir -> . RFMT PUNTO RPRINT PARIZQ CADENA COMA expresion PARDER
    (29) salto -> . RGOTO ID PTCOMA
    (28) if_inst -> . RIF expresion LLAVIZQ salto LLAVDER
    (25) llamada_func -> . ID PARIZQ PARDER
    (27) etiqueta_instr -> . ID DOSPTS
    (26) return_instr -> . RRETURN
    (41) expresion -> . DECIMAL
    (42) expresion -> . ENTERO
    (43) expresion -> . RP
    (44) expresion -> . RH
    (45) expresion -> . ID
    (46) expresion -> . expresion MAYOR expresion
    (47) expresion -> . expresion MAYORIGUAL expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MENORIGUAL expresion
    (50) expresion -> . expresion IGUALDAD expresion
    (51) expresion -> . expresion DIFERENTE expresion
    (52) expresion -> . RINT PARIZQ expresion PARDER
    (53) expresion -> . MENOS expresion

    RSTACK          shift and go to state 42
    RHEAP           shift and go to state 44
    RFMT            shift and go to state 45
    RGOTO           shift and go to state 46
    RIF             shift and go to state 47
    ID              shift and go to state 30
    RRETURN         shift and go to state 48
    DECIMAL         shift and go to state 49
    ENTERO          shift and go to state 50
    RP              shift and go to state 51
    RH              shift and go to state 52
    RINT            shift and go to state 43
    MENOS           shift and go to state 41

    instrucciones                  shift and go to state 53
    instruccion                    shift and go to state 32
    asignacion                     shift and go to state 33
    imprimir                       shift and go to state 34
    salto                          shift and go to state 35
    if_inst                        shift and go to state 36
    llamada_func                   shift and go to state 37
    etiqueta_instr                 shift and go to state 38
    return_instr                   shift and go to state 39
    expresion                      shift and go to state 40

state 28

    (6) variables -> RVAR RSTACK . CORIZQ ENTERO CORDER RFLOAT PTCOMA variables1

    CORIZQ          shift and go to state 54


state 29

    (5) conjLibs -> CADENA PTCOMA CADENA PARDER . variables
    (6) variables -> . RVAR RSTACK CORIZQ ENTERO CORDER RFLOAT PTCOMA variables1

    RVAR            shift and go to state 24

    variables                      shift and go to state 55

state 30

    (25) llamada_func -> ID . PARIZQ PARDER
    (27) etiqueta_instr -> ID . DOSPTS
    (45) expresion -> ID .

    PARIZQ          shift and go to state 56
    DOSPTS          shift and go to state 57
    IGUAL           reduce using rule 45 (expresion -> ID .)
    MAYOR           reduce using rule 45 (expresion -> ID .)
    MAYORIGUAL      reduce using rule 45 (expresion -> ID .)
    MENOR           reduce using rule 45 (expresion -> ID .)
    MENORIGUAL      reduce using rule 45 (expresion -> ID .)
    IGUALDAD        reduce using rule 45 (expresion -> ID .)
    DIFERENTE       reduce using rule 45 (expresion -> ID .)


state 31

    (14) funcion -> RFUNC ID PARIZQ PARDER LLAVIZQ instrucciones . LLAVDER
    (16) instrucciones -> instrucciones . instruccion
    (18) instruccion -> . asignacion PTCOMA
    (19) instruccion -> . imprimir PTCOMA
    (20) instruccion -> . salto
    (21) instruccion -> . if_inst
    (22) instruccion -> . llamada_func PTCOMA
    (23) instruccion -> . etiqueta_instr
    (24) instruccion -> . return_instr PTCOMA
    (31) asignacion -> . expresion IGUAL expresion MAS expresion
    (32) asignacion -> . expresion IGUAL expresion MENOS expresion
    (33) asignacion -> . expresion IGUAL expresion POR expresion
    (34) asignacion -> . expresion IGUAL expresion DIV expresion
    (35) asignacion -> . expresion IGUAL expresion
    (36) asignacion -> . expresion IGUAL RSTACK CORIZQ RINT PARIZQ expresion PARDER CORDER
    (37) asignacion -> . expresion IGUAL RHEAP CORIZQ RINT PARIZQ expresion PARDER CORDER
    (38) asignacion -> . RSTACK CORIZQ RINT PARIZQ expresion PARDER CORDER IGUAL expresion
    (39) asignacion -> . RHEAP CORIZQ RINT PARIZQ expresion PARDER CORDER IGUAL expresion
    (40) asignacion -> . expresion IGUAL RMATH PUNTO RMOD PARIZQ expresion COMA expresion PARDER
    (30) imprimir -> . RFMT PUNTO RPRINT PARIZQ CADENA COMA expresion PARDER
    (29) salto -> . RGOTO ID PTCOMA
    (28) if_inst -> . RIF expresion LLAVIZQ salto LLAVDER
    (25) llamada_func -> . ID PARIZQ PARDER
    (27) etiqueta_instr -> . ID DOSPTS
    (26) return_instr -> . RRETURN
    (41) expresion -> . DECIMAL
    (42) expresion -> . ENTERO
    (43) expresion -> . RP
    (44) expresion -> . RH
    (45) expresion -> . ID
    (46) expresion -> . expresion MAYOR expresion
    (47) expresion -> . expresion MAYORIGUAL expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MENORIGUAL expresion
    (50) expresion -> . expresion IGUALDAD expresion
    (51) expresion -> . expresion DIFERENTE expresion
    (52) expresion -> . RINT PARIZQ expresion PARDER
    (53) expresion -> . MENOS expresion

    LLAVDER         shift and go to state 58
    RSTACK          shift and go to state 42
    RHEAP           shift and go to state 44
    RFMT            shift and go to state 45
    RGOTO           shift and go to state 46
    RIF             shift and go to state 47
    ID              shift and go to state 30
    RRETURN         shift and go to state 48
    DECIMAL         shift and go to state 49
    ENTERO          shift and go to state 50
    RP              shift and go to state 51
    RH              shift and go to state 52
    RINT            shift and go to state 43
    MENOS           shift and go to state 41

    instruccion                    shift and go to state 59
    asignacion                     shift and go to state 33
    imprimir                       shift and go to state 34
    salto                          shift and go to state 35
    if_inst                        shift and go to state 36
    llamada_func                   shift and go to state 37
    etiqueta_instr                 shift and go to state 38
    return_instr                   shift and go to state 39
    expresion                      shift and go to state 40

state 32

    (17) instrucciones -> instruccion .
